fixed eslint errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,6 @@
     "resolveJsonModule": true,
     "types": ["node", "jest"]
   },
-  "references": [
-    { "path": "./packages/core" },
-    { "path": "./packages/redis" },
-    { "path": "./packages/e2e/proxy" },
-    { "path": "./packages/e2e/serverInstance" },
-    { "path": "./packages/e2e/testResults" },
-    { "path": "./packages/e2e/testRunner" }
-  ],
+  "references": [{ "path": "./packages/core" }],
   "files": []
 }
