--- a/.github/workflows/publish-to-npm.yaml
+++ b/.github/workflows/publish-to-npm.yaml
@@ -5,7 +5,26 @@ on:
     types: [published]
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build package
+        run: npm run build
+      - name: Run format, lint, and typecheck
+        run: npm run check
+      - name: Run tests
+        run: npm test
+
   publish:
+    needs: check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -18,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build package
-        run: npm run build --if-present
+        run: npm run build
       - name: Publish to npm
         run: npm publish --access public
         env:
